src/styles/navbar.css
.navbar {
  width: 100%;
  height: 70px;
  background: linear-gradient(to right, #1e56c7, #001a4d);
  display: flex;
  flex-direction: row;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}
 
.navbar .leftSide .logoContainer {
  background-color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;       /* Makes it a vertical strip the full height of the nav */
  padding: 0 20px;    /* Adds white space to the left and right of the logo */
}

.navbar .leftSide {
  flex: 50%;
  height: 100%;
  display: flex;
  align-items: center;
  padding-left: 0;    /* Changed to 0 so the white strip can start where you want */
  margin-left: 50px; /* Use margin instead if you want space before the strip starts */
}

.navbar .leftSide img {
  width: 70px;
}

.navbar .rightSide {
  flex: 50%;
  height: 100%;
  display: flex;
  align-items: center;
  /* Change this from center to flex-end */
  justify-content: flex-end; 
  
  /* Add this to create a nice gap from the edge */
  padding-right: 30px;
}

.navbar a {
  color: white;
  text-decoration: none;
  margin: 20px;
  font-size: 15px; 
  margin-right: 10px;
}

.navbar .rightSide button {
  background-color: transparent;
  border: none;
  color: white;
  cursor: pointer;
}

.navbar .rightSide svg {
  font-size: 40px;
}

.navbar #open {
  padding-left: 0px;
}
.navbar #open img {
  display: none;
}

.navbar #open .logoContainer  {
  display: none;
}

.navbar #close img {
  display: inherit;
}

.navbar #open .hiddenLinks {
  display: inherit;
  margin-left: 30px;
}

.navbar #close .hiddenLinks {
  display: none;
}



.navbar #open a {
  width: 70px;
  margin: 5px;
}
@media only screen and (max-width: 900px) {
  .navbar .rightSide a {
    width: 70px;
  }
  .navbar .leftSide {
    padding-left: 50px;
  }
}

/* Mobile Logic (Screen size 600px and below) */
@media only screen and (max-width: 600px) {
  
  /* Hide the standard desktop links */
  .navbar .rightSide a {
    display: none;
  }

  .navbar .rightSide button {
    display: flex; /* Show the hamburger icon */
    align-items: center;
  }

  /* The Pop-out Menu Container */
  .navbar #open .hiddenLinks {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: auto;
    position: absolute;
    top: 70px; /* Sits exactly below the 70px navbar */
    left: 0;
    background-color: #001a4d; /* Matches your dark blue */
    z-index: 10;
    padding-bottom: 20px;
    border-top: 1px solid rgba(255, 255, 255, 0.1);
  }

  /* Styling individual links in the pop-out */
  .navbar #open a {
    width: 100%;
    text-align: center;
    margin: 0;
    padding: 15px 0;
    font-size: 1.2rem;
    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
  }

  /* Keep the logo visible while menu is open */
  .navbar #open .logoContainer, 
  .navbar #open img {
    display: flex;
  }
}

@media only screen and (min-width: 601px) {
  .navbar .rightSide button {
    display: none;
  }
  .hiddenLinks {
    display: none;
  }
}

